--- a/client/src/main/resources/client/scenes/LandingPage.fxml
+++ b/client/src/main/resources/client/scenes/LandingPage.fxml
@@ -1,14 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="client.scenes.LandingPageCtrl"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="400.0" prefWidth="600.0" stylesheets="@../../css/styles.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.scenes.LandingPageCtrl">
+   <children>
+      <Label layoutX="176.0" layoutY="82.0" text="Welcome to Talio">
+         <font>
+            <Font size="32.0" />
+         </font>
+      </Label>
+      <Label layoutX="127.0" layoutY="193.0" text="Enter server ip:">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Label>
+      <TextField fx:id="server_ip" layoutX="233.0" layoutY="186.0" prefHeight="35.0" prefWidth="208.0" />
+      <Button fx:id="connect_button" layoutX="270.0" layoutY="245.0" mnemonicParsing="false" onAction="#connect" styleClass="button-9" text="Connect" />
+   </children>
 </AnchorPane>
