--- a/client/src/main/resources/client/scenes/BoardOverview.fxml
+++ b/client/src/main/resources/client/scenes/BoardOverview.fxml
@@ -1,16 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
 <AnchorPane prefHeight="500.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.scenes.BoardOverviewCtrl">
    <children>
-      <ListView editable="true" layoutX="75.0" layoutY="75.0" prefHeight="350.0" prefWidth="160.0" />
-      <ListView editable="true" layoutX="295.0" layoutY="75.0" prefHeight="350.0" prefWidth="160.0" />
-      <ListView editable="true" layoutX="515.0" layoutY="75.0" prefHeight="350.0" prefWidth="160.0" />
+      
       <TextField alignment="CENTER" layoutX="75.0" layoutY="33.0" prefHeight="25.0" prefWidth="160.0" promptText="Name your list!" />
       <TextField alignment="CENTER" layoutX="295.0" layoutY="33.0" prefHeight="25.0" prefWidth="160.0" promptText="Name your list!" />
       <TextField alignment="CENTER" layoutX="515.0" layoutY="33.0" prefHeight="25.0" prefWidth="160.0" promptText="Name your list!" />
+      <ScrollPane hbarPolicy="NEVER" layoutX="75.0" layoutY="110.0" prefHeight="289.0" prefWidth="160.0">
+         <content>
+            <ListView fx:id="taskList1" editable="true" fixedCellSize="35.0" prefHeight="287.0" prefWidth="159.0" />
+         </content>
+      </ScrollPane>
+      <ScrollPane hbarPolicy="NEVER" layoutX="295.0" layoutY="110.0" prefHeight="289.0" prefWidth="160.0">
+         <content>
+            <ListView fx:id="taskList2" fixedCellSize="35.0" layoutX="75.0" prefHeight="287.0" prefWidth="159.0" />
+         </content>
+      </ScrollPane>
+      <ScrollPane hbarPolicy="NEVER" layoutX="515.0" layoutY="110.0" prefHeight="289.0" prefWidth="160.0">
+         <content>
+            <ListView fx:id="taskList3" fixedCellSize="35.0" layoutX="75.0" prefHeight="287.0" prefWidth="159.0" />
+         </content>
+      </ScrollPane>
+      <Button fx:id="addTaskButton" layoutX="75.0" layoutY="85.0" mnemonicParsing="false" onAction="#createTask" prefHeight="25.0" prefWidth="99.0" text="NEW TASK" />
+
    </children>
 </AnchorPane>
