--- a/client/src/main/resources/client/scenes/BoardPage.fxml
+++ b/client/src/main/resources/client/scenes/BoardPage.fxml
@@ -1,10 +1,38 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.Group?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.ScrollBar?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="client.scenes.BoardCtrl"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="500.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.scenes.BoardOverviewCtrl">
+    <children>
+        <HBox fx:id="hBox" prefHeight="100.0" prefWidth="200.0" spacing="40.0" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="50.0">
+            <children>
+                <Group fx:id="group">
+                    <children>
+                        <TextField alignment="CENTER" prefHeight="25.0" prefWidth="160.0" promptText="Name your list!" />
+                        <ListView editable="true" layoutY="37.0" prefHeight="350.0" prefWidth="160.0" />
+                    </children>
+                </Group>
+                <Group>
+                    <children>
+                        <TextField alignment="CENTER" prefHeight="25.0" prefWidth="160.0" promptText="Name your list!" />
+                        <ListView editable="true" layoutY="37.0" prefHeight="350.0" prefWidth="160.0" />
+                    </children>
+                </Group>
+                <Group>
+                    <children>
+                        <TextField alignment="CENTER" prefHeight="25.0" prefWidth="160.0" promptText="Name your list!" />
+                        <ListView editable="true" layoutY="37.0" prefHeight="350.0" prefWidth="160.0" />
+                    </children>
+                </Group>
+            </children>
+        </HBox>
+        <ScrollBar fx:id="scrollBar" layoutX="650.0" layoutY="479.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+        <Button fx:id="addButton" layoutX="701.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleAddButtonAction" text="+" />
+    </children>
 </AnchorPane>
