--- a/client/src/main/resources/client/scenes/BoardOverview.fxml
+++ b/client/src/main/resources/client/scenes/BoardOverview.fxml
@@ -50,7 +50,7 @@ right when adding new lists -->
             </Group>
          </children>
       </HBox>
-      <Button layoutX="701.0" layoutY="14.0" mnemonicParsing="false" onAction="#createTaskList" text="+" />
+      <Button layoutX="701.0" layoutY="14.0" mnemonicParsing="false" onAction="#createTaskList" text="+" AnchorPane.rightAnchor="31.0" />
 
    </children>
 
