--- a/client/src/main/resources/client/scenes/LandingPage.fxml
+++ b/client/src/main/resources/client/scenes/LandingPage.fxml
@@ -3,6 +3,8 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
@@ -13,16 +15,16 @@
    <children>
       <BorderPane prefHeight="200.0" prefWidth="200.0" styleClass="border_page" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <center>
-            <VBox alignment="CENTER" spacing="10">
-               <Label text="Welcome to Talio!">
-                  <font>
-                     <Font name="Roboto" size="32.0" />
-                  </font>
-               </Label>
+            <VBox alignment="CENTER" spacing="20.0">
+               <ImageView fitHeight="200.0" fitWidth="400.0" pickOnBounds="true" preserveRatio="true">
+                  <image>
+                     <Image url="@../images/Logo.png" />
+                  </image>
+               </ImageView>
                <HBox alignment="CENTER" spacing="10">
                   <Label text="Enter server ip:">
                      <font>
-                        <Font name = "Roboto" size="19.0" />
+                        <Font name="Roboto" size="19.0" />
                      </font></Label>
                   <TextField fx:id="server_ip" prefHeight="35.0" prefWidth="208.0" styleClass="input" />
                </HBox>
