--- a/client/src/main/resources/client/scenes/css/styles.css
+++ b/client/src/main/resources/client/scenes/css/styles.css
@@ -43,3 +43,19 @@
  -fx-border-radius: 1px;
  -fx-background-color: #CCFFFF;
 }
+
+/* added effect with blue outline*/
+.text-field{
+ -fx-effect: dropshadow( three-pass-box, blue , 10.0, 0.0,0.0,0.0);
+ -fx-background-insets:3.0;
+ -fx-background-radius: 5.0;
+}
+
+
+.text-field:focused{
+ -fx-background-color: white;
+ -fx-text-fill:blue;
+ -fx-prompt-text-fill:white;
+ -fx-background-insets: -0.1, 2.0;
+ -fx-font-size:14.0;
+}
