--- a/client/src/main/resources/client/scenes/LandingPage.fxml
+++ b/client/src/main/resources/client/scenes/LandingPage.fxml
@@ -16,9 +16,9 @@
       <BorderPane prefHeight="200.0" prefWidth="200.0" styleClass="border_page" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <center>
             <VBox alignment="CENTER" spacing="20.0">
-               <ImageView fitHeight="200.0" fitWidth="400.0" pickOnBounds="true" preserveRatio="true">
+               <ImageView fx:id="logo1" fitHeight="200.0" fitWidth="400.0" pickOnBounds="true" preserveRatio="true">
                   <image>
-                     <Image url="@/client/images/Logo.png" />
+                     <Image url="@../images/Logo.png" />
                   </image>
                </ImageView>
                <HBox alignment="CENTER" spacing="10">
