--- a/client/src/main/resources/client/scenes/LandingPage.fxml
+++ b/client/src/main/resources/client/scenes/LandingPage.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
@@ -8,6 +9,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
@@ -15,22 +17,51 @@
    <children>
       <BorderPane prefHeight="200.0" prefWidth="200.0" styleClass="border_page" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <center>
-            <VBox alignment="CENTER" spacing="20.0">
-               <ImageView fx:id="logo1" fitHeight="200.0" fitWidth="400.0" pickOnBounds="true" preserveRatio="true">
-                  <image>
-                     <Image url="@../images/Logo.png" />
-                  </image>
-               </ImageView>
+            <VBox alignment="CENTER" prefHeight="398.0" prefWidth="592.0" spacing="30.0">
+               <Label alignment="CENTER" prefHeight="46.0" prefWidth="129.0" text="Welcome!">
+                  <font>
+                     <Font name="Roboto" size="29.0" />
+                  </font>
+               </Label>
                <HBox alignment="CENTER" spacing="10">
-                  <Label text="Enter server ip:">
+                  <Label text="Server Adress:">
                      <font>
                         <Font name="Roboto" size="19.0" />
                      </font></Label>
                   <TextField fx:id="server_ip" prefHeight="35.0" prefWidth="208.0" styleClass="input" />
+                  <Button fx:id="connect_button" mnemonicParsing="false" onAction="#connect" prefHeight="38.0" prefWidth="128.0" styleClass="button-9" text="Connect" textFill="WHITE" />
                </HBox>
-               <Button fx:id="connect_button" mnemonicParsing="false" onAction="#connect" prefHeight="60.0" prefWidth="162.0" styleClass="button-9" text="Connect" textFill="WHITE" />
+               <padding>
+                  <Insets bottom="20.0" />
+               </padding>
             </VBox>
          </center>
+         <top>
+            <HBox alignment="CENTER_LEFT" prefHeight="79.0" prefWidth="596.0" style="-fx-background-color: #2f58cd;" BorderPane.alignment="TOP_LEFT">
+               <children>
+                  <ImageView fx:id="logo1" fitHeight="64.0" fitWidth="139.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/Logo.png" />
+                     </image>
+                     <HBox.margin>
+                        <Insets left="10.0" top="2.0" />
+                     </HBox.margin>
+                  </ImageView>
+                  <Region prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS" />
+                  <ImageView fx:id="exitButton" fitHeight="46.0" fitWidth="44.0" onMouseClicked="#exit" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/ExitButton.png" />
+                     </image>
+                     <HBox.margin>
+                        <Insets right="10.0" />
+                     </HBox.margin>
+                  </ImageView>
+               </children>
+            </HBox>
+         </top>
+         <bottom>
+            <HBox alignment="CENTER_LEFT" prefHeight="79.0" prefWidth="596.0" BorderPane.alignment="CENTER" />
+         </bottom>
       </BorderPane>
    </children>
 </AnchorPane>
