--- a/client/src/main/resources/client/scenes/css/styles.css
+++ b/client/src/main/resources/client/scenes/css/styles.css
@@ -38,7 +38,7 @@
 
 /* landing page css */
 .anchor_page {
- -fx-border-color: blue;
+ -fx-border-color: #2f58cd;
  -fx-border-width: 2px;
  -fx-border-radius: 1px;
  -fx-background-color: #CCFFFF;
