--- a/client/src/main/resources/client/scenes/css/styles.css
+++ b/client/src/main/resources/client/scenes/css/styles.css
@@ -32,7 +32,7 @@
     -fx-cursor: default;
 }
 
-.button-9:active {
+.button-9:hover {
     -fx-box-shadow: rgba(50, 50, 93, .1) 0 0 0 1px inset, rgba(50, 50, 93, .2) 0 6px 15px 0, rgba(0, 0, 0, .1) 0 2px 2px 0, rgba(50, 151, 211, .3) 0 0 0 4px;
 }
 
