--- a/client/src/main/resources/client/scenes/BoardOverview.fxml
+++ b/client/src/main/resources/client/scenes/BoardOverview.fxml
@@ -8,29 +8,31 @@
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Button?>
 
-<ScrollPane fx:id="scrollPaneMain" fitToHeight="true" fitToWidth="true" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.scenes.BoardOverviewCtrl">
-   <content>
-<AnchorPane fx:id="anchorPaneMain" prefHeight="500.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
-   <children>
-      <HBox fx:id="listContainer" prefHeight="100.0" prefWidth="200.0" spacing="40.0" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="50.0">
-         <children>
-            <Group fx:id="group">
-               <children>
-                  <TextField fx:id="listName1" alignment="CENTER" prefHeight="25.0" prefWidth="205.0" text="List 1" />
+<?import javafx.scene.layout.BorderPane?>
+<BorderPane xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.scenes.BoardOverviewCtrl">
+   <center>
+      <ScrollPane fx:id="scrollPaneMain" fitToHeight="true" fitToWidth="true">
+         <AnchorPane fx:id="anchorPaneMain" prefHeight="500.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/19"
+                     xmlns:fx="http://javafx.com/fxml/1">
+
+            <HBox fx:id="listContainer" prefHeight="100.0" prefWidth="200.0" spacing="40.0"
+                  AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0"
+                  AnchorPane.topAnchor="50.0">
+               <Group fx:id="group">
+                  <TextField fx:id="listName1" alignment="CENTER" prefHeight="25.0" prefWidth="205.0"
+                             text="List 1"/>
                   <ScrollPane hbarPolicy="NEVER" layoutY="60.0" prefHeight="348.0" prefWidth="205.0">
-                     <content>
-                        <ListView fx:id="taskList1" editable="true" fixedCellSize="35.0" prefHeight="346.0" prefWidth="204.0" />
-                     </content>
+                     <ListView fx:id="taskList1" editable="true" fixedCellSize="35.0" prefHeight="346.0"
+                               prefWidth="204.0"/>
                   </ScrollPane>
-                        <Button fx:id="deleteTaskListsButton" layoutX="191.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="25.0" text="x" />
-               </children>
-            </Group>
-         </children>
-      </HBox>
-      <Button layoutX="701.0" layoutY="14.0" mnemonicParsing="false" onAction="#createTaskList" text="+" AnchorPane.rightAnchor="31.0" />
+                  <Button fx:id="deleteTaskListsButton" layoutX="191.0" mnemonicParsing="false"
+                          prefHeight="25.0" prefWidth="25.0" text="x"/>
+               </Group>
+            </HBox>
+            <Button layoutX="701.0" layoutY="14.0" mnemonicParsing="false" onAction="#createTaskList" text="+"
+                    AnchorPane.rightAnchor="31.0"/>
 
-   </children>
-
-</AnchorPane>
-   </content>
-</ScrollPane>
+         </AnchorPane>
+      </ScrollPane>
+   </center>
+</BorderPane>
