--- a/client/src/main/resources/client/scenes/LandingPage.fxml
+++ b/client/src/main/resources/client/scenes/LandingPage.fxml
@@ -26,7 +26,7 @@
                </font>
             </Label>
             <HBox alignment="CENTER" spacing="10">
-               <Label text="Server Adress:">
+               <Label text="Server Address:">
                   <font>
                      <Font name="Roboto" size="19.0"/>
                   </font>
