--- a/client/src/main/resources/client/scenes/css/BoardOverview.css
+++ b/client/src/main/resources/client/scenes/css/BoardOverview.css
@@ -1,26 +1,32 @@
 /*css for task name input dialog*/
+/*noinspection ALL,CssUnusedSymbol*/
 .dialog-pane {
     -fx-background-color: #2196f3;
 }
 
+/*noinspection ALL,CssUnusedSymbol*/
 .dialog-pane .label {
     -fx-text-fill: white;
 }
 
+/*noinspection ALL,CssUnusedSymbol*/
 .dialog-pane .header-panel {
     -fx-background-color: #2f58cd;
 }
 
+/*noinspection ALL,CssUnusedSymbol*/
 .dialog-pane .header-panel .label {
     -fx-font-size: 3em;
 }
 
+/*noinspection ALL,CssUnusedSymbol*/
 .dialog-pane .text-field{
     -fx-effect: dropshadow( three-pass-box, blue , 10.0, 0.0,0.0,0.0);
     -fx-background-insets:3.0;
     -fx-background-radius: 5.0;
 }
 
+/*noinspection ALL,CssUnusedSymbol*/
 .dialog-pane .button{
     -fx-background-color: #4e31aa;
     -fx-border-color: #0d6efd;
@@ -36,6 +42,7 @@
     -fx-transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
 
+/*noinspection ALL,CssUnusedSymbol*/
 .dialog-pane .button:hover {
     -fx-color: #fff;
     -fx-background-color: #0b5ed7;
