--- a/client/src/main/resources/client/scenes/BoardOverview.fxml
+++ b/client/src/main/resources/client/scenes/BoardOverview.fxml
@@ -1,36 +1,50 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.Group?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Button?>
-
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
-<BorderPane xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.scenes.BoardOverviewCtrl">
-   <center>
-      <ScrollPane fx:id="scrollPaneMain" fitToHeight="true" fitToWidth="true">
-         <AnchorPane fx:id="anchorPaneMain" prefHeight="500.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/19"
-                     xmlns:fx="http://javafx.com/fxml/1">
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Region?>
 
-            <HBox fx:id="listContainer" prefHeight="100.0" prefWidth="200.0" spacing="40.0"
-                  AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0"
-                  AnchorPane.topAnchor="50.0">
+<BorderPane xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.scenes.BoardOverviewCtrl">
+   <top>
+      <HBox fx:id="header" alignment="CENTER_LEFT" prefHeight="79.0" prefWidth="596.0" style="-fx-background-color: #2f58cd; -fx-border-width: 0 0 3 0; -fx-border-color: white;" BorderPane.alignment="TOP_LEFT">
+         <ImageView fx:id="logo1" fitHeight="64.0" fitWidth="139.0" pickOnBounds="true" preserveRatio="true">
+            <HBox.margin>
+               <Insets left="10.0" top="2.0" />
+            </HBox.margin>
+            <Image url="@../images/Logo.png" />
+         </ImageView>
+         <Region prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS" />
+         <ImageView fx:id="exitButton" fitHeight="46.0" fitWidth="44.0" onMouseClicked="#goToPrevious" pickOnBounds="true" preserveRatio="true">
+            <HBox.margin>
+               <Insets right="10.0" />
+            </HBox.margin>
+            <Image url="@../images/ExitButton.png" />
+         </ImageView>
+      </HBox>
+   </top>
+   <center>
+      <ScrollPane fx:id="scrollPaneMain" fitToHeight="true" fitToWidth="true" style="-fx-background-color: #2f58cd;">
+         <AnchorPane fx:id="anchorPaneMain" prefHeight="500.0" prefWidth="750.0" style="-fx-background-color: transparent;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+
+            <HBox fx:id="listContainer" prefHeight="100.0" prefWidth="200.0" spacing="40.0" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="50.0">
                <Group fx:id="group">
-                  <TextField fx:id="listName1" alignment="CENTER" prefHeight="25.0" prefWidth="205.0"
-                             text="List 1"/>
+                  <TextField fx:id="listName1" alignment="CENTER" prefHeight="25.0" prefWidth="205.0" text="List 1" />
                   <ScrollPane hbarPolicy="NEVER" layoutY="60.0" prefHeight="348.0" prefWidth="205.0">
-                     <ListView fx:id="taskList1" editable="true" fixedCellSize="35.0" prefHeight="346.0"
-                               prefWidth="204.0"/>
+                     <ListView fx:id="taskList1" editable="true" fixedCellSize="35.0" prefHeight="346.0" prefWidth="204.0" />
                   </ScrollPane>
-                  <Button fx:id="deleteTaskListsButton" layoutX="191.0" mnemonicParsing="false"
-                          prefHeight="25.0" prefWidth="25.0" text="x"/>
+                  <Button fx:id="deleteTaskListsButton" layoutX="191.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="25.0" text="x" />
                </Group>
             </HBox>
-            <Button layoutX="701.0" layoutY="14.0" mnemonicParsing="false" onAction="#createTaskList" text="+"
-                    AnchorPane.rightAnchor="31.0"/>
+            <Button layoutX="701.0" layoutY="14.0" mnemonicParsing="false" onAction="#createTaskList" text="+" AnchorPane.rightAnchor="31.0" />
 
          </AnchorPane>
       </ScrollPane>
