--- a/client/src/main/resources/client/scenes/LandingPage.fxml
+++ b/client/src/main/resources/client/scenes/LandingPage.fxml
@@ -13,54 +13,48 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" styleClass="anchor_page" stylesheets="@css/styles.css"
-            xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="client.scenes.LandingPageCtrl">
-   <BorderPane prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
-               AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" styleClass="anchor_page" stylesheets="@css/styles.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.scenes.LandingPageCtrl">
+   <BorderPane prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
       <center>
          <VBox alignment="CENTER" prefHeight="398.0" prefWidth="592.0" spacing="30.0">
             <Label alignment="CENTER" prefHeight="46.0" prefWidth="129.0" text="Welcome!">
                <font>
-                  <Font name="Roboto" size="29.0"/>
+                  <Font name="Roboto" size="29.0" />
                </font>
             </Label>
             <HBox alignment="CENTER" spacing="10">
                <Label text="Server Address:">
                   <font>
-                     <Font name="Roboto" size="19.0"/>
+                     <Font name="Roboto" size="19.0" />
                   </font>
                </Label>
-               <TextField fx:id="server_ip" prefHeight="35.0" prefWidth="208.0"/>
-               <Button mnemonicParsing="false" onAction="#connect" prefHeight="38.0" prefWidth="128.0"
-                       styleClass="button-9" text="Connect" textFill="WHITE"/>
+               <TextField fx:id="server_ip" prefHeight="35.0" prefWidth="208.0" />
+               <Button mnemonicParsing="false" onAction="#connect" prefHeight="38.0" prefWidth="128.0" styleClass="button-9" text="Connect" textFill="WHITE" />
             </HBox>
             <padding>
-               <Insets bottom="20.0"/>
+               <Insets bottom="20.0" />
             </padding>
          </VBox>
       </center>
       <top>
-         <HBox alignment="CENTER_LEFT" prefHeight="79.0" prefWidth="596.0" style="-fx-background-color: #2f58cd;"
-               BorderPane.alignment="TOP_LEFT">
+         <HBox fx:id="header" alignment="CENTER_LEFT" prefHeight="79.0" prefWidth="596.0" style="-fx-background-color: #2f58cd; -fx-border-width: 0 0 3 0; -fx-border-color: white;" BorderPane.alignment="TOP_LEFT">
             <ImageView fx:id="logo1" fitHeight="64.0" fitWidth="139.0" pickOnBounds="true" preserveRatio="true">
                <HBox.margin>
-                  <Insets left="10.0" top="2.0"/>
+                  <Insets left="10.0" top="2.0" />
                </HBox.margin>
-               <Image url="@../images/Logo.png"/>
+               <Image url="@../images/Logo.png" />
             </ImageView>
-            <Region prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS"/>
-            <ImageView fx:id="exitButton" fitHeight="46.0" fitWidth="44.0" onMouseClicked="#exit" pickOnBounds="true"
-                       preserveRatio="true">
+            <Region prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS" />
+            <ImageView fx:id="exitButton" fitHeight="46.0" fitWidth="44.0" onMouseClicked="#exit" pickOnBounds="true" preserveRatio="true">
                <HBox.margin>
-                  <Insets right="10.0"/>
+                  <Insets right="10.0" />
                </HBox.margin>
-               <Image url="@../images/ExitButton.png"/>
+               <Image url="@../images/ExitButton.png" />
             </ImageView>
          </HBox>
       </top>
       <bottom>
-         <HBox alignment="CENTER_LEFT" prefHeight="79.0" prefWidth="596.0" BorderPane.alignment="CENTER"/>
+         <HBox alignment="CENTER_LEFT" prefHeight="79.0" prefWidth="596.0" BorderPane.alignment="CENTER" />
       </bottom>
    </BorderPane>
 </AnchorPane>
