--- a/client/src/main/resources/client/scenes/BoardCreate.fxml
+++ b/client/src/main/resources/client/scenes/BoardCreate.fxml
@@ -1,11 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="304.0" prefWidth="599.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.scenes.BoardCreateCtrl">
+<BorderPane prefHeight="304.0" prefWidth="599.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.scenes.BoardCreateCtrl">
     <padding>
         <Insets bottom="40" left="40" right="40" top="40" />
     </padding>
@@ -36,7 +43,7 @@
                <font>
                   <Font size="20.0" />
                </font></Label>
-                <PasswordField fx:id="passwordField" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                <PasswordField fx:id="passwordField" disable="true" GridPane.columnIndex="1" GridPane.rowIndex="2">
                <font>
                   <Font size="20.0" />
                </font></PasswordField>
