--- a/client/src/main/resources/client/scenes/AdminLogin.fxml
+++ b/client/src/main/resources/client/scenes/AdminLogin.fxml
@@ -3,14 +3,13 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<?import javafx.scene.control.PasswordField?>
 <BorderPane prefHeight="209.0" prefWidth="599.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.scenes.AdminLoginCtrl">
     <padding>
         <Insets bottom="40" left="40" right="40" top="40" />
@@ -33,12 +32,12 @@
                     <font>
                         <Font size="20.0" />
                     </font></Label>
-                <PasswordField fx:id="password" GridPane.columnIndex="1" GridPane.rowIndex="0">
+                <PasswordField fx:id="password" onAction="#login" GridPane.columnIndex="1" GridPane.rowIndex="0">
                     <font>
                         <Font size="20.0" />
                     </font></PasswordField>
 
-                <Button onAction="#login" alignment="CENTER" contentDisplay="CENTER" prefWidth="100.0" text="Login" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                <Button alignment="CENTER" contentDisplay="CENTER" onAction="#login" prefWidth="100.0" text="Login" GridPane.columnIndex="1" GridPane.rowIndex="2">
                     <font>
                         <Font size="20.0" />
                     </font></Button>
